[package]
edition = "2021"
name = "kmedoids"
version = "0.2.0"
authors = ["Erich Schubert <erich.schubert@tu-dortmund.de>"]
description = "k-Medoids clustering with the FasterPAM algorithm"
homepage = "https://github.com/kno10/rust-kmedoids"
readme = "README.md"
keywords = ["clustering", "machine-learning", "matrix", "optimization", "algorithm"]
categories = ["science", "mathematics"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kno10/rust-kmedoids"

[lib]
name = "kmedoids"
path = "src/mod.rs"
test = true
doc = true

[[example]]
name = "orlib-kmedoids"
path = "examples/orlib-kmedoids.rs"
required-features = ["ndarray", "rand", "parallel"]

[[example]]
name = "mnist-kmedoids"
path = "examples/mnist-kmedoids.rs"
required-features = ["ndarray", "rand", "parallel"]

[dependencies]
num-traits = "0.2"
ndarray = {version = "0.15", optional = true}
rand  = {version = "0.8", optional = true}
rayon = {version = "1.5", optional = true}

[dev-dependencies]
ndarray = "0.15"
rand  = "0.8"
byteorder = "1.4" # for mnist-kmedoids

[features]
default = ["rand", "ndarray", "parallel"]
parallel = ["rand", "ndarray", "rayon"]
# Enable additional assertions
assertions = []

